package edu.fiuba.algo3.modelo;

public class Masculino extends Genero {

}
